classDiagram
direction TB
    class User {
	    +uuid id
	    +string email
	    +enum role "Admin, Quality, Producer"
    }

    class Project {
	    +uuid id
	    +string name
	    +uuid owner_id
    }

    class Delivery {
	    +uuid id
	    +uuid project_id
	    +string title
	    +string description
	    +uuid issuer_id
	    +enum status "DRAFT, PUBLISHED"
	    +timestamp created_at
	    +timestamp published_at
    }

    class File {
	    +uuid id
	    +uuid delivery_id
	    +uuid nce_id
	    +string storage_key
	    +string filename
	    +timestamp created_at
    }

    class Receipt {
	    +uuid id
	    +uuid delivery_id
	    +uuid file_id
	    +uuid generated_by
	    +timestamp generated_at
    }

    class Notification {
	    +uuid id
	    +uuid delivery_id
	    +string to_email
	    +enum channel
	    +enum status "PENDING, SENT, FAILED"
	    +timestamp sent_at
    }

    class Survey {
	    +uuid id
	    +uuid delivery_id "nullable"
	    +enum type "NPS, CSAT"
	    +smallint score
	    +string comment
	    +string respondent_email
	    +timestamp responded_at
    }

    class NCE {
	    +uuid id
	    +uuid delivery_id
	    +string title
	    +text description
	    +enum category "precision, coherence, oubli"
	    +enum severity "minor, major, critical"
	    +enum status "OPEN, IN_PROGRESS, CLOSED"
	    +uuid assigned_to "nullable"
	    +timestamp created_at
	    +list attachments
    }

    class Guest {
	    +uuid id
	    +string email
	    +string name
	    +timestamp created_at
    }

    class EmailService {
	    +sendEmail(notificationId)
	    +pollInbox() : processReplies()
	    +parseAttachments()
	    +classifySurveyOrNCE()
    }

    class AuditLog {
	    +uuid id
	    +uuid user_id
	    +string action_type
	    +string entity_type
	    +uuid entity_id
	    +timestamp timestamp
    }

    User "1" --> "0..*" Delivery : crée
    Project "1" --> "0..*" Delivery : contient
    Delivery "1" --> "0..*" File : contient
    Delivery "1" --> "0..1" Receipt : a
    Delivery "1" --> "0..*" Notification : crée
    Delivery "1" --> "0..*" Survey : collecte
    Delivery "1" --> "0..*" NCE : collecte
    User "1" --> "0..*" AuditLog : crée
    Guest "0..*" --> Notification : reçoit
    Guest "0..*" --> EmailService : répond
    EmailService --> Survey : crée
    EmailService --> NCE : crée

